--- a/NucleoContratos.Web/WebContent/WEB-INF/web.xml
+++ b/NucleoContratos.Web/WebContent/WEB-INF/web.xml
@@ -13,7 +13,7 @@
   
   <context-param>
 		<param-name>primefaces.THEME</param-name>
-		<!-- <param-value>bootstrap</param-value>-->
-		<param-value>Cupertino</param-value>
+		 <!-- <param-value>bootstrap</param-value>-->
+		 <param-value>start</param-value>
 	</context-param>
 </web-app>
