--- a/NucleoContratos.Web/.classpath
+++ b/NucleoContratos.Web/.classpath
@@ -14,5 +14,6 @@
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/primefaces-4.0.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/Nucleo.integracoes"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
