inicio de criação de logins do sistema de contratos

--- a/Nucleo.Web/.classpath
+++ b/Nucleo.Web/.classpath
@@ -15,7 +15,7 @@
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry combineaccessrules="false" kind="src" path="/Nucleo.intranet"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/Nucleo.Medicao"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/Nucleo.integracoes"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
