--- a/Contratos.Web/.project
+++ b/Contratos.Web/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Contratos.Web</name>
+	<name>Contrato.Web</name>
 	<comment></comment>
 	<projects>
 	</projects>
