--- a/Contratos.Web/WebContent/WEB-INF/web.xml
+++ b/Contratos.Web/WebContent/WEB-INF/web.xml
@@ -4,6 +4,17 @@
  xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" 
  version="3.0">
   <display-name>Contratos.Web</display-name>
+  <filter>
+	  <filter-name>Primefaces FileUpload Filter</filter-name>
+	  <filter-class>org.primefaces.webapp.filter.FileUploadFilter</filter-class>
+  </filter>
+  <filter-mapping>
+	  <filter-name>Primefaces FileUpload Filter</filter-name>
+	  <servlet-name>Faces Servlet</servlet-name>
+  </filter-mapping>
+  <listener>
+		<listener-class>com.sun.faces.config.ConfigureListener</listener-class>
+  </listener>
   <servlet>
     <servlet-name>Faces Servlet</servlet-name>
     <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
